<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.taobao.lottery</groupId>
	<artifactId>smart-message</artifactId>
	<packaging>jar</packaging>
	<name>smart message tools</name>
	<version>1.0.0</version>
	<url>
		https://github.com/oscarrr110/smart-message    
	</url>
    
    <build>
		<filters>
			<filter>${user.home}/antx.properties</filter>
		</filters>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
                <includes>
                    <include>queue-persistence-ds.xml</include>
                </includes>
                <filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
                    <exclude>queue-persistence-ds.xml</exclude>
                </excludes>
                <filtering>false</filtering>
			</resource>
		</resources>
		<plugins>
			 <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <compilerVersion>1.6</compilerVersion>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>GBK</encoding>
					<debug>true</debug>
                </configuration>
            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <forkMode>pertest</forkMode>
                    <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
                    <argLine>-Xms1024m -Xmx1024m -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>
		</plugins>
	</build>
    

	<dependencies>
		<dependency>
			<groupId>com.taobao.metamorphosis</groupId>
			<artifactId>metamorphosis-client</artifactId>
			<version>1.4.1.1</version>
		</dependency>
        <dependency>
            <groupId>com.alibaba.toolkit.common.logging</groupId>
            <artifactId>logging</artifactId>
            <version>1.0</version>
        </dependency>
		<dependency>
			<groupId>com.taobao.notify</groupId>
			<artifactId>notify-store4j</artifactId>
			<version>1.8.4</version>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.3</version>
			<classifier>jdk15</classifier>
		</dependency>
        <dependency>
 		 <groupId>com.taobao.messenger</groupId>
 		 <artifactId>messenger-common</artifactId>
  		<version>1.3.3</version>
		</dependency>
		<dependency>
            <groupId>com.taobao.nb.mobile</groupId>
            <artifactId>push-client</artifactId>
            <version>1.0.2-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>
	</dependencies>

</project>
